--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mapbox/mapbox-sdk": "^0.16.1",
     "cloudinary": "^2.6.1",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
@@ -27,5 +28,8 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
     "path-to-regexp": "^8.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.15.21"
   }
 }
